chore: fix SonarCloud issues and apply code style improvements